# kimi-agent-rs

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
kaos/: Cargo.toml
kaos/src/: lib.rs  line_stream.rs  local.rs  path.rs  ssh.rs
kaos/tests/: exec_options.rs
kimi-agent/: Cargo.toml  build.rs
kimi-agent/src/: agentspec.rs  app.rs  config.rs  lib.rs  llm.rs  mcp.rs  mcp_http_proxy.rs  mcp_legacy.rs  mcp_transport.rs  metadata.rs  session.rs  session_id.rs  share.rs
kimi-agent/src/cli/: AGENTS.md  info.rs  mcp.rs  mod.rs
kimi-agent/src/skill/: AGENTS.md  builtin.rs  mod.rs
kimi-agent/src/skill/flow/: d2.rs  mermaid.rs
kimi-agent/src/skills/skill-creator/: SKILL.md
kimi-agent/src/soul/: AGENTS.md  agent.rs  context.rs  kimisoul.rs  message.rs  mod.rs  toolset.rs
kimi-agent/src/storage/: db.rs  events.rs  mcp.rs  mod.rs  schema.rs  scope.rs  sessions.rs  tests.rs  types.rs
kimi-agent/src/tools/: mod.rs  shell.rs  utils.rs
kimi-agent/src/tools/file/: glob.rs  grep.rs  mod.rs  read.rs  replace.rs  write.rs
kimi-agent/src/tools/multiagent/: create.rs  task.rs
kimi-agent/src/tools/web/: fetch.rs
kimi-agent/src/utils/: aioqueue.rs  broadcast.rs  environment.rs  path.rs  slashcmd.rs  string.rs
kimi-agent/src/wire/: AGENTS.md  channel.rs  file.rs  mod.rs  server.rs
kimi-agent/tests/: agent_test_utils.rs  config.rs  create_llm.rs  default_agent.rs  environment.rs  kimisoul_ralph_loop.rs  kimisoul_slash_commands.rs  load_agent.rs  mcp_boxlite_ssh_e2e.rs  mcp_boxlite_ssh_oauth_e2e.rs  session.rs  skill.rs  tool_create_subagent.rs  tool_descriptions.rs  tool_grep.rs  tool_read_file.rs  tool_schemas.rs  tool_test_utils.rs  wire_message.rs  wire_stdio.rs  wire_ws.rs
kimi-agent/tests/fixtures/boxlite_e2e/: boxlite_mcp_common.py  boxlite_mcp_http.py  boxlite_mcp_stdio.py  boxlite_oauth_mcp.py  oauth_browser.sh  requirements.txt  sshd_config  start_http_fixture.sh  start_oauth_fixture.sh  start_sshd.sh
kimi-agent/tests/support/: boxlite_e2e.rs  boxlite_mcp.rs  oauth_mock.rs
kosong/: Cargo.toml
kosong/src/: generate.rs  message.rs
kosong/src/chat_provider/: anthropic.rs  kimi.rs  mod.rs  openai_legacy.rs  openai_responses.rs
kosong/src/chat_provider/anthropic/: mod.rs  provider.rs  request.rs  response.rs  stream.rs
kosong/src/chat_provider/echo/: dsl.rs  mod.rs
kosong/src/chat_provider/openai_responses/: mod.rs  provider.rs  request.rs  response.rs  stream.rs
kosong/src/tooling/: mod.rs
kosong/src/utils/: jsonschema.rs
