[workspace]
members = ["kaos", "kimi-agent", "kosong"]
resolver = "2"

[workspace.package]
version = "1.8.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
flate2 = "1"
futures = "0.3"
glob = "0.3"
globset = "0.4"
hex = "0.4"
html2md = "0.2"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "tiff",
    "webp",
] }
jsonschema = "0.42"
md5 = "0.8"
percent-encoding = "2"
rand = "0.9"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "multipart",
] }
rmcp = { version = "0.17", features = [
    "auth",
    "client",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
rustc_version_runtime = "0.3"
schemars = { version = "1.2", features = ["derive"] }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }
sha2 = "0.10"
similar = "2"
sysinfo = "0.38"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "io-util",
    "io-std",
    "process",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
webbrowser = "1.1"
zip = "8.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
