[package]
name = "kaos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
dirs.workspace = true
glob.workspace = true
typed-path = "0.12"
russh = "0.57"
russh-sftp = "2.1"
sha2 = "0.10"

[dev-dependencies]
tokio.workspace = true
