[package]
name = "kaos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
futures.workspace = true
glob.workspace = true
russh = "0.57"
russh-sftp = "2.1"
serde.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
typed-path = "0.12"

[dev-dependencies]
tokio.workspace = true
