[package]
name = "kimi-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kimi-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum = { version = "0.8", features = ["ws"] }
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
flate2.workspace = true
futures.workspace = true
html2md.workspace = true
image.workspace = true
jsonschema.workspace = true

kaos = { path = "../kaos" }
kosong = { path = "../kosong" }
md5.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rmcp.workspace = true
schemars.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
similar.workspace = true
sysinfo.workspace = true
tar.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
webbrowser.workspace = true
zip.workspace = true

[dev-dependencies]
filetime = "0.2"
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.28"
wiremock = "0.6"
