[package]
name = "kosong"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
schemars.workspace = true
futures.workspace = true
bytes.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid.workspace = true
url.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
